--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "topthink/think-multi-app": "^1.0",
         "topthink/think-view": "^1.0",
         "topthink/think-captcha": "^3.0",
-        "phpoffice/phpspreadsheet": "^1.15"
+        "phpoffice/phpspreadsheet": "^1.15",
+        "topthink/think-swoole": "^3.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
